<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/table_margin"
    android:orientation="vertical"
    tools:context="com.fsilberberg.ftamonitor.view.testing.TestingRandomization">

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:padding="5dp"
        android:text="@string/randomize_enable"
        android:id="@+id/randomize_enable" />

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:padding="5dp"
        android:text="@string/randomize_field_con"
        android:id="@+id/randomize_field_con" />

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:padding="5dp"
        android:text="@string/randomize_robot_con"
        android:id="@+id/randomize_robot_con" />

    <Switch
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_gravity="end"
        android:padding="5dp"
        android:text="@string/randomize_robot_vals"
        android:id="@+id/randomize_robot_vals" />

</LinearLayout>

